@@ -2,6 +2,7 @@ PHP                                                                        NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
 ?? Nov 2005, PHP 5.1
 - Allow recursive calls to __get/__set for different properties. (Dmitry)
+- Allow "= null" default for parameters with a class type-hint. (Derick)
 - Upgraded PEAR to version 1.4.4. (Greg)
 - Fixed bug in mysqli extension with unsigned int(11) being represented as 
   signed integer in PHP instead of string in 32bit systems. (Andrey)
